fix grid image not showing up - changed name to cover_2

--- a/styles/src/grid-gallery/shared.less
+++ b/styles/src/grid-gallery/shared.less
@@ -78,7 +78,7 @@
 
     &[data-project="squarespace"] {
       .imagery {
-        background-image: url('../projects/squarespace-cover.jpg');
+        background-image: url('../projects/squarespace-cover_2.jpg');
       }
     }
 
